# kde1-amor

./: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  VERSION  amor.lsm  configure  configure.in
amor/: CMakeLists.txt  Makefile.am  Makefile.in  amor.cpp  amor.h  amoranim.cpp  amoranim.h  amorconfig.cpp  amordialog.cpp  amordialog.h  amortips.cpp  amortips.h  version.h
amor/animations/: Makefile.am  Makefile.in  blobrc  ghostrc
amor/animations/blob/: Makefile.am  Makefile.in  blob.xcf
amor/animations/ghost/: Makefile.in
amor/data/: CMakeLists.txt  Makefile.in  billyrc  bsdrc  tuxrc
amor/data/b/: Makefile.in
amor/data/blob/: Makefile.in
amor/data/eyes/: Makefile.in
amor/data/ghost/: Makefile.in
amor/data/static/: billy.xpm  bsd.xpm  tux.xpm
amor/doc/: Makefile  Makefile.in
amor/doc/en/: Makefile  Makefile.am  Makefile.in
po/: Makefile.am  Makefile.in
