install(FILES
    blobrc ghostrc eyesrc brc nekorc
    pingurc wormrc tips-en billyrc bsdrc
    tuxrc taorc
    DESTINATION ${KDE1_DATADIR}/amor
)

install(FILES
    b/b-f.xpm
    b/b-f2.xpm
    b/b1-r.xpm
    b/b1.xpm
    b/b2-r.xpm
    b/b2.xpm
    b/b3-r.xpm
    b/b3.xpm
    b/b4-r.xpm
    b/b4.xpm
    b/bcol1.xpm
    b/bcol2.xpm
    b/bdrib1.xpm
    b/bdrib2.xpm
    b/bdrib3.xpm
    b/bdrib4.xpm
    b/bdrib5.xpm
    b/bdrib6.xpm
    b/bdrib7.xpm
    b/bdrop.xpm
    b/bgo1.xpm
    b/bgo2.xpm
    b/bgo3.xpm
    b/bgo4.xpm
    b/bgo5.xpm
    b/bgo6.xpm
    b/bgo7.xpm
    b/bh1.xpm
    b/bpof1.xpm
    b/bpof2.xpm
    b/bpof3.xpm
    b/bpof4.xpm
    b/bpof5.xpm
    b/bpof6.xpm
    b/sa1.xpm
    b/sa2.xpm
    b/sa2a.xpm
    b/sa2b.xpm
    b/sa2c.xpm
    b/salut.xpm
    b/salut1.xpm

    DESTINATION ${KDE1_DATADIR}/amor/b
)

install(FILES
    neko/claw1.xpm
    neko/claw2.xpm
    neko/jump1.xpm
    neko/jump2.xpm
    neko/jump3.xpm
    neko/jump4.xpm
    neko/jumpl1.xpm
    neko/jumpl2.xpm
    neko/jumpl3.xpm
    neko/jumpl4.xpm
    neko/lick.xpm
    neko/lick2.xpm
    neko/run1.xpm
    neko/run2.xpm
    neko/run3.xpm
    neko/run4.xpm
    neko/scratch1.xpm
    neko/scratch2.xpm
    neko/scratch3.xpm
    neko/scratch4.xpm
    neko/sit.xpm
    neko/sitleft.xpm
    neko/sleep1.xpm
    neko/sleep2.xpm
    neko/surprise.xpm
    neko/tail.xpm
    neko/yawn.xpm

    DESTINATION ${KDE1_DATADIR}/amor/neko
)

install(FILES
    blob/blob.xpm
    blob/blob_b1.xpm
    blob/blob_b2.xpm
    blob/blob_e1.xpm
    blob/blob_ex1.xpm
    blob/blob_g1.xpm
    blob/blob_g2.xpm
    blob/blob_gl1.xpm
    blob/blob_gl2.xpm
    blob/blob_gl3.xpm
    blob/blob_h1.xpm
    blob/blob_h2.xpm
    blob/blob_h3.xpm
    blob/blob_s1.xpm
    blob/blob_s2.xpm
    blob/blob_s3.xpm
    blob/blob_z1.xpm
    blob/blob_z2.xpm
    blob/blob_z3.xpm
    blob/blob_r45.xpm
    blob/blob_r90.xpm
    blob/blob_r135.xpm
    blob/blob_r180.xpm
    blob/blob_r225.xpm
    blob/blob_r270.xpm
    blob/blob_r315.xpm
    blob/blob_f1.xpm
    blob/blob_f2.xpm
    blob/blob_f3.xpm
    blob/blob_sl1.xpm
    blob/blob_sl2.xpm
    blob/blob_sl3.xpm
    blob/blob_sl4.xpm
    blob/blob_jet1.xpm
    blob/blob_jet2.xpm
    blob/blob_jet3.xpm
    blob/blob_jet4.xpm
    blob/blob_l_jet1.xpm
    blob/blob_l_jet2.xpm
    blob/blob_l_jet3.xpm
    blob/blob_l_jet4.xpm
    blob/blob_fire2.xpm
    blob/blob_fire5.xpm
    blob/blob_fire8.xpm
    blob/blob_fire10.xpm
    blob/blob_fire3.xpm
    blob/blob_fire6.xpm
    blob/blob_fire9.xpm
    blob/blob_fire11.xpm
    blob/blob_fire4.xpm
    blob/blob_fire7.xpm
    blob/blob_r_turn1.xpm
    blob/blob_r_turn2.xpm
    blob/blob_r_turn3.xpm
    blob/blob_r_turn4.xpm
    blob/blob_l_turn1.xpm
    blob/blob_l_turn2.xpm
    blob/blob_l_turn3.xpm
    blob/blob_l_turn4.xpm
    blob/blob_BeamDown1.xpm
    blob/blob_BeamDown2.xpm
    blob/blob_BeamDown3.xpm
    blob/blob_BeamDown4.xpm
    blob/blob_BeamDown5.xpm
    blob/blob_BeamDown6.xpm
    blob/blob_BeamDown7.xpm
    blob/blob_BeamDown8.xpm
    blob/blob_BeamDown9.xpm
    blob/blob_BeamUp1.xpm
    blob/blob_BeamUp2.xpm
    blob/blob_BeamUp3.xpm
    blob/blob_BeamUp4.xpm
    blob/blob_BeamUp5.xpm
    blob/blob_BeamUp6.xpm
    blob/blob_BeamUp7.xpm
    blob/blob_BeamUp8.xpm
    blob/blob_BeamUp9.xpm
    blob/blob_BeamUp10.xpm

    DESTINATION ${KDE1_DATADIR}/amor/blob
)

install(FILES
    eyes/eye_1.xpm
    eyes/eye_2.xpm
    eyes/eye_b.xpm
    eyes/eye_d.xpm
    eyes/eye_e.xpm
    eyes/eye_h1.xpm
    eyes/eye_h2.xpm
    eyes/eye_h3.xpm
    eyes/eye_h4.xpm
    eyes/eye_l.xpm
    eyes/eye_m1.xpm
    eyes/eye_m2.xpm
    eyes/eye_m3.xpm
    eyes/eye_m4.xpm
    eyes/eye_m5.xpm
    eyes/eye_m6.xpm
    eyes/eye_m7.xpm
    eyes/eye_s1.xpm
    eyes/eye_s2.xpm
    eyes/eye_s3.xpm
    eyes/eye_s4.xpm
    eyes/eye_u.xpm
    eyes/eye_z1.xpm
    eyes/eye_z2.xpm
    eyes/eye_z3.xpm
    eyes/eye_z4.xpm
    eyes/eye_z5.xpm

    DESTINATION ${KDE1_DATADIR}/amor/eyes
)

install(FILES
    ghost/ghost_1.xpm
    ghost/ghost_2.xpm
    ghost/ghost_z1.xpm
    ghost/ghost_z2.xpm
    ghost/ghost_z3.xpm
    ghost/ghost_z4.xpm
    ghost/ghost_z5.xpm
    ghost/ghost_e.xpm
    ghost/ghost_m1.xpm
    ghost/ghost_m2.xpm
    ghost/ghost_m3.xpm
    ghost/ghost_m4.xpm
    ghost/ghost_m5.xpm
    ghost/ghost_m6.xpm
    ghost/ghost_m7.xpm
    DESTINATION ${KDE1_DATADIR}/amor/ghost
)

install(FILES
    pingu/pinguin.xpm

    pingu/walk_l1.xpm
    pingu/walk_l2.xpm
    pingu/walk_l3.xpm
    pingu/walk_l4.xpm
    pingu/walk_l5.xpm

    pingu/walk_l6.xpm
    pingu/walk_l7.xpm
    pingu/walk_l8.xpm

    pingu/walk_r1.xpm
    pingu/walk_r2.xpm
    pingu/walk_r3.xpm
    pingu/walk_r4.xpm
    pingu/walk_r5.xpm

    pingu/walk_r6.xpm
    pingu/walk_r7.xpm
    pingu/walk_r8.xpm

    pingu/floater1.xpm
    pingu/floater2.xpm
    pingu/floater3.xpm
    pingu/floater4.xpm

    pingu/floater5.xpm
    pingu/floater6.xpm
    pingu/floater7.xpm
    pingu/floater8.xpm

    pingu/faller1.xpm
    pingu/faller2.xpm
    pingu/faller3.xpm
    pingu/faller4.xpm

    pingu/faller5.xpm
    pingu/faller6.xpm
    pingu/faller7.xpm
    pingu/faller8.xpm

    pingu/tumble1.xpm
    pingu/tumble2.xpm
    pingu/tumble3.xpm
    pingu/tumble4.xpm

    pingu/tumble5.xpm
    pingu/tumble6.xpm
    pingu/tumble7.xpm
    pingu/tumble8.xpm

    pingu/bomber1.xpm
    pingu/bomber2.xpm
    pingu/bomber3.xpm
    pingu/bomber4.xpm

    pingu/bomber5.xpm
    pingu/bomber6.xpm
    pingu/bomber7.xpm
    pingu/bomber8.xpm

    pingu/bomber9.xpm
    pingu/bomber10.xpm
    pingu/bomber11.xpm
    pingu/bomber12.xpm

    pingu/bomber13.xpm
    pingu/bomber14.xpm
    pingu/bomber15.xpm
    pingu/bomber16.xpm

    pingu/digger1.xpm
    pingu/digger2.xpm
    pingu/digger3.xpm
    pingu/digger4.xpm

    pingu/digger5.xpm
    pingu/digger6.xpm
    pingu/digger7.xpm
    pingu/digger8.xpm

    pingu/digger9.xpm
    pingu/digger10.xpm
    pingu/digger11.xpm
    pingu/digger12.xpm

    pingu/digger13.xpm
    pingu/digger14.xpm

    pingu/bash_l1.xpm
    pingu/bash_l2.xpm
    pingu/bash_l3.xpm
    pingu/bash_l4.xpm

    pingu/bash_l5.xpm
    pingu/bash_l6.xpm
    pingu/bash_l7.xpm
    pingu/bash_l8.xpm

    pingu/bash_l9.xpm
    pingu/bash_l10.xpm
    pingu/bash_l11.xpm
    pingu/bash_l12.xpm

    pingu/bash_r1.xpm
    pingu/bash_r2.xpm
    pingu/bash_r3.xpm
    pingu/bash_r4.xpm

    pingu/bash_r5.xpm
    pingu/bash_r6.xpm
    pingu/bash_r7.xpm
    pingu/bash_r8.xpm

    pingu/bash_r9.xpm
    pingu/bash_r10.xpm
    pingu/bash_r11.xpm
    pingu/bash_r12.xpm

    pingu/blocker1.xpm
    pingu/blocker2.xpm
    pingu/blocker3.xpm
    pingu/blocker4.xpm

    pingu/blocker5.xpm
    pingu/blocker6.xpm

    DESTINATION ${KDE1_DATADIR}/amor/pingu
)

install(FILES
    static/billy.xpm
    static/bsd.xpm
    static/tux.xpm
    DESTINATION ${KDE1_DATADIR}/amor/static
)

install(FILES
    tao/yy-1.xpm
    tao/yy-2.xpm
    tao/yy-3.xpm
    tao/yy-4.xpm
    tao/yy-5.xpm
    tao/yy-6.xpm
    tao/yy-7.xpm
    tao/yy-8.xpm
    tao/yy-9.xpm
    tao/yy.xpm
    tao/yy105.xpm
    tao/yy120.xpm
    tao/yy135.xpm
    tao/yy15.xpm
    tao/yy150.xpm
    tao/yy165.xpm
    tao/yy180.xpm
    tao/yy195.xpm
    tao/yy210.xpm
    tao/yy225.xpm
    tao/yy240.xpm
    tao/yy255.xpm
    tao/yy270.xpm
    tao/yy285.xpm
    tao/yy30.xpm
    tao/yy300.xpm
    tao/yy315.xpm
    tao/yy330.xpm
    tao/yy345.xpm
    tao/yy45.xpm
    tao/yy60.xpm
    tao/yy75.xpm
    tao/yy90.xpm
    tao/yyx10.xpm
    tao/yyx12.xpm
    tao/yyx14.xpm
    tao/yyx16.xpm
    tao/yyx18.xpm
    tao/yyx20.xpm
    tao/yyx22.xpm
    tao/yyx24.xpm
    tao/yyx26.xpm
    tao/yyx28.xpm
    tao/yyx30.xpm
    tao/yyx6.xpm
    tao/yyx8.xpm

    DESTINATION ${KDE1_DATADIR}/amor/tao
)

install(FILES
    worm/w-a1.xpm
    worm/w-a2.xpm
    worm/w-b1.xpm
    worm/w-b2.xpm
    worm/w-be1.xpm
    worm/w-be2.xpm

    worm/w-be3.xpm
    worm/w-be4.xpm
    worm/w-d1.xpm
    worm/w-d2.xpm
    worm/w-d3.xpm
    worm/w-d4.xpm

    worm/w-d5.xpm
    worm/w-dr1.xpm
    worm/w-e1.xpm
    worm/w-l1.xpm
    worm/w-l2.xpm
    worm/w-l3.xpm

    worm/w-ml0.xpm
    worm/w-ml1.xpm
    worm/w-ml2.xpm
    worm/w-ml3.xpm
    worm/w-mr0.xpm
    worm/w-mr1.xpm

    worm/w-mr2.xpm
    worm/w-mr3.xpm
    worm/w-s1.xpm
    worm/w-s2.xpm
    worm/w-s3.xpm
    worm/w-u1.xpm

    worm/w-u2.xpm
    worm/w-u3.xpm
    worm/w-wl1.xpm
    worm/w-wl2.xpm
    worm/w-wr1.xpm
    worm/w-wr2.xpm

    DESTINATION ${KDE1_DATADIR}/amor/worm
)
