# Add all your pic files here
data_DATA = blob.xpm blob_b1.xpm blob_b2.xpm blob_e1.xpm blob_ex1.xpm\
            blob_g1.xpm blob_g2.xpm blob_gl1.xpm blob_gl2.xpm blob_gl3.xpm\
            blob_h1.xpm blob_h2.xpm blob_h3.xpm\
            blob_s1.xpm blob_s2.xpm blob_s3.xpm\
            blob_z1.xpm blob_z2.xpm blob_z3.xpm\
            blob_r45.xpm blob_r90.xpm blob_r135.xpm blob_r180.xpm\
            blob_r225.xpm blob_r270.xpm blob_r315.xpm\
            blob_f1.xpm blob_f2.xpm blob_f3.xpm\
            blob_sl1.xpm blob_sl2.xpm blob_sl3.xpm blob_sl4.xpm

# This is where it will all be installed
datadir = $(kde_datadir)/amor/blob
